[FIX] Make categories in categorizator wrap to tab width
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/4.x@23207 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/layout.css
+++ b/styles/layout/layout.css
@@ -1396,7 +1396,6 @@ div.multiselect ul {
 	list-style-position: outside;
 	list-style-type: none;
 	text-align: left;
-	white-space: nowrap;
 	margin: 0;
 	padding: 0;
 }
